force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/XactlyExpress__XCCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Xactly Express Custom Settings</label>
</CustomObject>