force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__Audit_URL__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Audit_URL__c</fullName>
    <defaultValue>&apos;https://xactlyusagelogs.secure.force.com/xactlyexpressauditexport&apos;</defaultValue>
    <label>Audit URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>