force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__CalcFuturePeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CalcFuturePeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CalcFuturePeriod</label>
    <type>Checkbox</type>
</CustomField>