force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__CommStmtUserBreakup__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CommStmtUserBreakup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is going to decide how many Users or PayoutResults to process per commission statement batch. This is implemented to fix Apex CPU Timeout Limit Exception.
Set the value to &quot;0&quot; if you don&apos;t want to use the feature and process all the records at once.</description>
    <inlineHelpText>This is going to decide how many Users or PayoutResults to process per commission statement batch.
Set the value to &quot;0&quot; if you don&apos;t want to use the feature and process all the records at once.
Don&apos;t set negatives</inlineHelpText>
    <label>CommStmtUserBreakup</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>