force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__DeleteBatchSize__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DeleteBatchSize__c</fullName>
    <defaultValue>20</defaultValue>
    <label>DeleteBatchSize</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>