force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__ImportLogFreq__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportLogFreq__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>ImportLogFreq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>