force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__insights_URL__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__insights_URL__c</fullName>
    <defaultValue>&apos;https://www.xactlycorp.com&apos;</defaultValue>
    <label>Insights URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>