force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__logoHeight__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__logoHeight__c</fullName>
    <defaultValue>175</defaultValue>
    <label>logoHeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>