force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__logoWidth__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__logoWidth__c</fullName>
    <defaultValue>350</defaultValue>
    <label>logoWidth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>