force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__MAX_ROW_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MAX_ROW_LIMIT__c</fullName>
    <defaultValue>500</defaultValue>
    <description>number of rows to be limited in query for payments. There are times when some users are missing and show up when we change this number.</description>
    <label>MAX ROW LIMIT</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>