force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__PaymentBatchSize__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <label>PaymentBatchSize</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>