force-app/main/default/objects/XactlyExpress__XCCustomSettings__c/fields/XactlyExpress__PlanBailLimit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PlanBailLimit__c</fullName>
    <defaultValue>75</defaultValue>
    <label>PlanBailLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>